<?xml version="1.0" encoding="utf-8"?>
<!--
~ Changes from Qualcomm Innovation Center, Inc. are provided under the following license:

~ Copyright (c) 2020-2021 Qualcomm Innovation Center, Inc.
~
~ Redistribution and use in source and binary forms, with or without
~ modification, are permitted (subject to the limitations in the
~ disclaimer below) provided that the following conditions are met:
~
~    * Redistributions of source code must retain the above copyright
~      notice, this list of conditions and the following disclaimer.
~
~    * Redistributions in binary form must reproduce the above
~      copyright notice, this list of conditions and the following
~      disclaimer in the documentation and/or other materials provided
~      with the distribution.
~
~    * Neither the name Qualcomm Innovation Center nor the names of its
~      contributors may be used to endorse or promote products derived
~      from this software without specific prior written permission.
~
~ NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE
~ GRANTED BY THIS LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT
~ HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED
~ WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
~ MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
~ IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR
~ ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
~ GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
~ INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER
~ IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
~ OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
~ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->

<!--
 Copyright 2015 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="app_name">Camera2Video</string>
    <string name="capture">Capture</string>
    <string name="antibanding">Antibanding</string>
    <string name="ae_mode">AE Mode</string>
    <string name="awb_mode">AWB Mode</string>
    <string name="af_mode">AF Mode</string>
    <string name="ae_lock">AE Lock</string>
    <string name="awb_lock">AWB Lock</string>
    <string name="nr_mode">Noise Reduction Mode</string>
    <string name="ir_led_mode">IR LED Mode</string>
    <string name="adrc_mode">ADRC Disable</string>
    <string name="exposure_metering_mode">Exposure Metering Mode</string>
    <string name="iso_mode">ISO Mode</string>
    <string name="thumbnail_button">Displays thumbnail of captured media</string>
    <string name="ZOOM">Zoom</string>
    <string name="defog">Defog</string>
    <string name="exposure_table">Exposure Table</string>
    <string name="ANR_table">ANR Table</string>
    <string name="LTM">LTM Table</string>
    <string name="saturation">Saturation Level</string>
    <string name="sharpness">Sharpness Level</string>
</resources>
